src/objects/MUSW__License_Parcel__c.object
<CustomObject>
    <description>Parcels associated to a License</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_source_c__c</fullName>
        <description>External source</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLicenseParcelUpdatedForASC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Mailing address</description>
        <label>IsLicenseParcelUpdatedForASC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Address_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>License Address Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__License2__c</fullName>
        <description>Lookup to the License.</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>License2_Parcels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <description>Lookup to the Parcel.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>License as Property</relationshipLabel>
        <relationshipName>Parcel_License2s</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Mailing address</description>
        <label>Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Melissa_Address_Verified__c</fullName>
        <formula>MUSW__Parcel__r.Melissa_Address_Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Melissa Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parcel_Address__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; MUSW__Parcel__r.Id, (MUSW__Parcel__r.Name + &apos;, &apos; + TEXT(MUSW__Parcel__r.MUSW__State__c) + &apos;, &apos; + MUSW__Parcel__r.MUSW__Post_Zip_Code__c + &apos;, &apos; + TEXT(MUSW__Parcel__r.Country__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Physical address</description>
        <label>Physical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Primary address</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the address is Public address</description>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal &amp; Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for License Parcel Record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of address picklist</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Address_Type</valueSetName>
        </valueSet>
    </fields>
    <label>License Parcel</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>